# ChangeLog for sci-libs/libtifiles2
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  30 Jun 2007; Christian Helbling <helch@gmx.ch> ChangeLog:
  sci-libs/libtifiles2: correcting digest

  30 Jun 2007; Jakub Moc <jakub@gentoo.org> libtifiles2-1.0.5.ebuild:
  Fix up gettext dependencies

  15 Jun 2007; Christian Helbling <helch@gmx.ch> +libtifiles2-1.0.5.ebuild,
  -libtifiles2-20061030.ebuild:
  Version bump. Better version numbers.

  04 Dec 2006; Markus Ullmann <jokey@gentoo.org>
  -libtifiles2-20060723.ebuild:
  Remove old

  02 Dec 2006; Christian Helbling <helch@gmx.ch>
  +libtifiles2-20061030.ebuild:
  Version bump

  04 Sep 2006; Christian Helbling <helch@gmx.ch>
  +libtifiles2-20060723.ebuild, +metadata.xml:
  New ebuild for bug 146028
