@@ -1,4 +1,4 @@
-DIST libtifiles2-1.0.5.tar.bz2 521368 RMD160 65b5c45c7b6e68e9cc8421483534fd80a7639ce2 SHA1 53c160cd215027a1bc1cbd162c90f36da96f746c SHA256 39770422371c332c5f7551a51c8449d9b4237c5b2cef33295fb4cca5d48a9a24
-EBUILD libtifiles2-1.0.5.ebuild 738 RMD160 a40f42bd00edaa78a24c4dd88a58733b392e5dae SHA1 ffc7800e0b5bb5d947d9f4aee0d9ca7b16b7eb1a SHA256 6a79cd37d662b3ec00aed4ec544af4b6cf5766abc0bf4d89d8a55b6a7de19413
-MISC ChangeLog 791 RMD160 00071cd83fe292c4227468ba0bef6890413a5d95 SHA1 b9e00d04408f779b8192be80fa861b41abef621a SHA256 c9349b91096622b2dbf758b79dd1a8ba05c6d0c4c2ff39185ac46b0c64892c2c
+DIST libtifiles2-1.0.7.tar.bz2 397853 RMD160 83e71771bf952e32131d5eedb4bf72e36bc07038 SHA1 54acbaba83c8b2a4afb8a0155193e87bd695aa56 SHA256 53c4ac4f87aa1d3dc5a2e68e509cdc7e668d3fd74b5992024b8667a34b7d021c
+EBUILD libtifiles2-1.0.7.ebuild 731 RMD160 7246ef9957d71f8f61e9b4acd7dd61d8440fc5ba SHA1 ae865687cbb5da3c004d6c53363e67e6f23884da SHA256 f70bd2a2abae5e3ee8d25425ee19b6d1c1f4239d7d45f1e4412f832dceeb5225
+MISC ChangeLog 912 RMD160 750364fb8ad5b41838f2daa788bc6dad90d5c1e8 SHA1 8ec08d0bd94dd3c705d866bbf0d9ee32f62502f1 SHA256 4218d2a9cbb4b75701967a637143600b69736d2acc6ba76bb7cddd26c34c40ae
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
