@@ -11,15 +11,13 @@ SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE="nls"
 
-RDEPEND=">=dev-libs/glib-2
+RDEPEND=">=dev-libs/glib-2.6.0
 	sci-libs/libticables2
-	sci-libs/libticonv
+	>=sci-libs/libticonv-1.0.4
 	nls? ( virtual/libintl )"
 
 DEPEND="${RDEPEND}
 	nls? ( sys-devel/gettext )"
-
-S=${WORKDIR}/${P}
 
 src_compile() {
 	econf $(use_enable nls) || die "econf failed"
