@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  22 Sep 2007; Christian Helbling <helch@gmx.ch> -libtifiles2-1.0.5.ebuild,
+  +libtifiles2-1.0.7.ebuild:
+  version bump
+
   30 Jun 2007; Christian Helbling <helch@gmx.ch> ChangeLog:
   sci-libs/libtifiles2: correcting digest
 
